Adding weather apis

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-    <!-- Load our React component. -->
+
+    <!-- <script src="OpenWeather.js" type="text/babel"></script> -->
+    <script src="WorldWeather.js" type="text/babel"></script>
     <script src="main.js" type="text/babel"></script>
 </head>
 <body>
