--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
     <!-- <script src="OpenWeather.js" type="text/babel"></script> -->
+    <script src="WorldWeatherUtils.js" type="text/babel"></script>
     <script src="WorldWeather.js" type="text/babel"></script>
     <script src="main.js" type="text/babel"></script>
 </head>
